static/styles/photo.css
body {
    margin: 0;
    font-family: Arial, serif;
    font-size: 16pt;
}

#top {
    display: block;
    height: 40px;
}

.btns {
    z-index: 100;
    top: 0;
    position: fixed;
    display: flex;
    justify-content: space-evenly;
    background-color: #3d3d3d;
    width: 100%;
    height: 50px;
    align-items: center;
    box-shadow: 0 3px 5px black;
}

.btn:link, .btn:visited, .btn:active {
    transition: 0.3s;
    color: white;
    text-decoration: none;
}

.btn:hover {
    transition: 0.3s;
    color: #88b7fd;
}

#content {
    width: 90%;
    margin-left: 5%;
    display: flex;
    justify-content: flex-start;
    height: 80vh;
}

img {
    height: 100%;
    margin-right: 10px;
}

.text {
    width: auto;
}

.data {
    color: grey;
    font-size: 14pt;
}

@media screen and (max-width: 990px) {
    .btn:link, .btn:visited, .btn:active {
        font-size: 12pt;
    }

    #content {
        flex-wrap: wrap;
        justify-content: center;
    }

    img {
        width: 90%;
    }
}

